[package]
name = "kvs"
version = "0.1.0"
authors = ["drjackild <edubovskoy@gmail.com>"]
description = "A key-value storage"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false

[dependencies]
clap = { version="2.33.0", features=["yaml"] }
failure = "0.1.7"
serde = "1.0.105"
serde_json = "1.0.49"

[dev-dependencies]
assert_cmd = "0.12.0"
predicates = "1.0.4"
tempfile = "3.1.0"
walkdir = "2.3.1"
