[package]
name = "kvs"
version = "0.1.0"
authors = ["drjackild <edubovskoy@gmail.com>"]
description = "A key-value storage"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false

[dependencies]
clap = { version="2.33.0", features=["yaml"] }
failure = "0.1.*"
serde = "1.*"
serde_json = "1.*"

[dev-dependencies]
assert_cmd = "0.12.*"
predicates = "1.*"
tempfile = "3.*"
walkdir = "2.*"
